<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.dkc.applaunchh.weatherapp.userdetail.UserDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgrounnd"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/user_detail"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/first_name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textPersonName"
                        android:text="@={viewModel.firstNameLiveData}"
                        android:textColorHint="#8e9094"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/last_name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="text"
                        android:text="@={viewModel.laslnameLiveData}"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/email_text"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.emailLiveData}"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/texterror"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:text="@{viewModel.error}"
                    android:visibility="@{viewModel.error == null ? View.GONE :View.VISIBLE}"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">
                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="@{(v) -> viewModel.onCancel(v)}"
                        android:text="Cancel"
                        android:layout_marginRight="10dp"
                        android:textAllCaps="false"
                        android:textColor="#d3d8e3"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:onClick="@{(v) -> viewModel.onSaveUserAccount(v)}"
                        android:text="Save"
                        android:textAllCaps="false"
                        android:textColor="#d3d8e3"
                        android:textSize="20sp"
                       />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>

